
   2.  fork: A module that wraps the fork, exec*, and waitpid functions.

         slsh/lib/process.sl utilizes this module to allow an
	 application to easily create subprocesses and pipelines.

   3.  sysconf: Module that implements interfaces to the posix
       sysconf, pathconf, etc. functions.

Intrinsic Functions
===================

   The following intrinsic functions have been added for 2.2:

      sumsq
          equivalent to sum(x*x)

      expm1
          More accurate version of exp(x)-1 for x near 0.

      log1p
          More accurate version of log(1+x) for x near 0

      list_to_array
          Creates an array from a list.

      string_matches
          A convenient alternative to string_match and string_match_nth
	  functions.

      strskipbytes (v2.2.3)
          Skip a range of bytes in a byte string.

      is_substrbytes (v2.2.3)
          Like is_substr except this works with binary strings
	  containing embedded null characters.

      strskipchar, strbskipchar (v2.2.3)
         Analogous to C ch=*p++ and ch=*p-- for UTF-8 encoded strings.

      _close
          Close an integer descriptor
      _fileno
          Returns the descriptor as an integer

      dup2, getsid, killpg, getpriority/setpriority
          Wraps the corresponding system functions.

      utime (v2.2.3)
          Change a file's last access and modification time.

      ldexp, frexp:
          If x == a*2^b, where 0.5<=a<1.0 then (a,b)=frexp(x),
	  and x=ldexp(a,b).

      islower, isupper, isxdigit, isalnum, isalpha, iscntrl, isprint,
      isgraph, ispunct, isblank, isspace (v2.2.3):
          Character classification functions.

   The following functions have been enhanced:

      hypot
          If given a single array argument, it returns the equivalent
	  of sqrt(sum(X*X)).

      polynom
          The calling interface to this function was changed and
	  support added for arrays.

      strreplace (v2.2.3)