@@ -216,6 +216,7 @@ Changes since 2.2.2
 87. src/slstrops.c: Vectorized strlow/strup intrinsics.
 88. src/slmath.c: Add support for more than 2 arguments to the
     _min/_max functions (Manfred Hanke).
+89. src/sllist.c: Added list_join, list_concat intrinsics (Mike Noble).
 
 {{{ Previous Versions
 
